defconfig: enable blu_active
Signed-off-by: engstk <eng.stk@sapo.pt>

--- a/arch/arm64/configs/lineageos_oneplus3_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus3_defconfig
@@ -703,3 +703,5 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
