defconfig: enable fastcharge

--- a/arch/arm64/configs/elementalx_defconfig
+++ b/arch/arm64/configs/elementalx_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-OP3-1.02-cm"
+CONFIG_LOCALVERSION="-ElementalX-OP3T-1.02-cm"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 # CONFIG_SWAP is not set
@@ -2159,6 +2159,7 @@ CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_FG=y
 CONFIG_FG_BQ27541=y
 CONFIG_ONEPLUS_FASTCHG=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
