--- a/arch/arm64/configs/lineageos_oneplus3_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus3_defconfig
@@ -705,3 +705,9 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
