--- a/arch/arm64/configs/lineageos_oneplus3_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus3_defconfig
@@ -711,3 +711,4 @@ CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_ZEN is not set
+CONFIG_SOUND_CONTROL=y
