Defconfig: enable fast charge

--- a/arch/arm64/configs/elementalx_defconfig
+++ b/arch/arm64/configs/elementalx_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-OP3-3.03-los-CUSTOM"
+CONFIG_LOCALVERSION="-ElementalX-OP3-3.04-los-CUSTOM"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 # CONFIG_SWAP is not set
@@ -1194,6 +1194,7 @@ CONFIG_PTN5150_TYPE_C=y
 CONFIG_TI_DRV2667=y
 CONFIG_GPIO_SWITCH=y
 # CONFIG_QPNP_MISC is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
